@@ -1,12 +1,7 @@
 {
-  "count": 6,
+  "count": 5,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-10-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-03T00:00:00Z",
       "count": 1,
